fazendo umas alteração ai

--- a/screens/index.html
+++ b/screens/index.html
@@ -149,19 +149,14 @@
             estes ministrem aulas esporádicas em conjunto com o tutor
             (coordenação de área).
           </p>
-          <!-- Gambiarra na imagem só para usar como base (na hora de colocar a imagem certa, será arrumado)-->
-        </div>
-        <img src="../assets/images/professor.png" height="200" alt="">
-
-        <!-- Esquece o aside que deixa para direita, pois o texto não cobre o espaço suficiente para deixar maneiro-->
-        <div class="item-center">
-          <p>
+          <p class="item w">
             E Aí, professor Preparado para embarcar nessa Jornada? é um trabalho
             voluntário de aproximadamente 2 horas semanais, e assinamos a carga
             horária
           </p>
           <a href="#participe" class="btn-p-main">Participe</a>
         </div>
+        <img src="../assets/images/professor.png" height="200" alt="">
       </article>
     </section>
     <section id="quem-somos">
@@ -259,7 +254,7 @@
         <label>PREPARETEC</label>
         <label>SYMETRA</label>
       </article>
-
+      <img href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTE08oiFkq09f2DVSntow_FXcF6XLKV_oZ6Xw&usqp=CAU">
     </footer>
   </main>
 </body>
