seção quem somos em andamento

--- a/screens/index.html
+++ b/screens/index.html
@@ -121,10 +121,11 @@
             </div>
           </div>
           <div class='polos-content'>
-            <div class="texto-polos">As aulas serão duas vezes na semana, divididas por polos, pra que fique mais
-              próximo de onde você aluno,
-              mora e estuda! Esses polos estão descritos acima, para que você conheça seu polo. São aulas presenciais, e
-              os alunos cadastrados aqui no site terão acesso ao dia, horário e local das aulas aqui pelo site!</div>
+            <div class="texto-polos">As aulas serão duas vezes na semana e serão divididas por polos, pra que fique mais
+              próximo de onde você, aluno,
+              mora e estuda! Esses polos estão descritos acima, para que você conheça seu polo de acordo com sua escola.
+              São aulas presenciais, e
+              os alunos cadastrados aqui no site terão acesso ao dia, horário e local das aulas aqui pelo site.</div>
           </div>
         </article>
       </article>
@@ -165,7 +166,7 @@
         <div class="line"></div>
       </article>
       <article class="quem-somos-content">
-        <div class="item qs">
+        <div class="qs">
           <p>
             Devido a defasagem na aprendizagem dos alunos, decorrente da Pandemia
             Covid-19, nos anos de 2020 a 2022, Nós do Departamento de Educação,
@@ -173,6 +174,12 @@
             “PREPARETEC” , cujo objetivo é preparar os alunos dos 9º Ano da Rede
             Municipal de Ensino de Mongaguá, que buscam o ingresso ao Ensino Médio
             nas Escolas Técnicas Públicas Profissionalizantes (Etecs).
+          </p>
+        </div>
+        <div class="qs">
+          <p>
+            Abaixo você verá a nossa equipe de funcionários que participaram para que esse projeto pudesse se tornar
+            realidade. Passando com o mouse por cima ou clicando, confira as informações sobre cada um.
           </p>
         </div>
       </article>
@@ -184,16 +191,15 @@
 
       </article>
       <article class="mentores">
-        <ul>
-          <li class="listTitle">Idealizadora:</li>
-          <li>Dalva Verardo - Coordenadora de Área de Matemática</li>
-          <li class="listTitle">Apoiadores E Colaboradores:</li>
-          <li>Priscila Eleutério - Diretora Municipal da Educação</li>
-          <li>Departamento de Educação de Mongaguá (DEM);</li>
-          <li>Prefeitura de Mongaguá;</li>
-          <li>ETEC Adolpho Berezin;</li>
-          <li class="listTitle">Symetra;</li>
-        </ul>
+        <div class="listTitle">Projeto Elaborado por:</div>
+        <div class="group-list">
+          <div class="foto-card" id="priscila-eleuterio">
+            <div class="nome-card">Priscila Eleutério</div>
+            <div class="card-content">Dirigente Municipal de Educação do Município de Mongaguá.</div>
+          </div>
+          <div class="logo-prefeitura"></div>
+          <div class="logo-dem"></div>
+        </div>
       </article>
       <!-- a terminar -->
       <article class="sobrenos">
