Seção quem somos finalizada, falta o carrossel

--- a/screens/index.html
+++ b/screens/index.html
@@ -183,14 +183,9 @@
           </p>
         </div>
       </article>
-      <article>
-        <div class="image-logo">
-          <img src="/assets/images/logoDEM.png" alt="" />
-          <img src="/assets/images/logoEscolaAdolphoBerezin.png" alt="" />
-        </div>
 
       </article>
-      <article class="mentores">
+      <article class="apoiadores">
         <div class="listTitle">Projeto Elaborado por:</div>
         <div class="group-list">
           <div class="foto-card" id="priscila-eleuterio">
@@ -201,32 +196,78 @@
           <div class="logo-dem"></div>
         </div>
       </article>
-      <!-- a terminar -->
+
       <article class="sobrenos">
-        <div class="card">
-          <img src="" alt="cade a foto demerson" />
-          <label class="devName">Demerson</label>
-          <label class="office">Desenvolvedor</label>
+        <div class="listTitle">Site desenvolvido por:</div>
+        <div class="group-list">
+          <div class="foto-card" id="demerson">
+            <div class="nome-card">Demerson Guilherme</div>
+            <div class="card-content">Desenvolvedor do Website</div>
+          </div>
+          <div class="foto-card" id="felipe">
+            <div class="nome-card">Felipe Barbosa</div>
+            <div class="card-content">Desenvolvedor do Website</div>
+          </div>
+          <div class="foto-card" id="ryan">
+            <div class="nome-card">Ryan Gualberto</div>
+            <div class="card-content">Desenvolvedor do Website</div>
+          </div>
+          <div class="foto-card" id="sophia">
+            <div class="nome-card">Sophia Verardo</div>
+            <div class="card-content">Desenvolvedora do Website</div>
+          </div>
+          <div class="foto-card" id="thomas">
+            <div class="nome-card">Thomas Bastos</div>
+            <div class="card-content">Desenvolvedor do Website</div>
+          </div>
         </div>
-        <div class="card">
-          <img src="../assets/images/felipe.jpg" />
-          <label class="devName">Felipe</label>
-          <label class="office"> Desenvolvedor</label>
-        </div>
-        <div class="card">
-          <img src="" alt="cade a foto ryan" />
-          <label class="devName">Ryan</label>
-          <label class="office"> Desenvolvedor</label>
-        </div>
-        <div class="card">
-          <img src="../assets/images/sophia.jpeg" />
-          <label class="devName">Sophia</label>
-          <label class="office"> Desenvolvedor</label>
-        </div>
-        <div class="card">
-          <img src="../assets/images/thomas.jpg" />
-          <label class="devName">Thomas</label>
-          <label class="office"> Desenvolvedor</label>
+      </article>
+
+      <article class="funcionarios">
+        <div class="listTitle">Professores do PREPARETEC:</div>
+        <div class="group-list">
+          <div class="foto-card professor">
+            <div class="nome-card">Dalva Verardo</div>
+            <div class="card-content">
+              <p>Coordenadora Diária e Idealizadora do Projeto. Professora de Matemática.</p>
+              <p>Polo(s): 1 e 2</p>
+            </div>
+          </div>
+          <div class="foto-card professor">
+            <div class="nome-card">Professor 1</div>
+            <div class="card-content">
+              <p>Professor de Matemática e Física</p>
+              <p>Polo(s): 1 e 2</p>
+            </div>
+          </div>
+          <div class="foto-card professor">
+            <div class="nome-card">Professor 2</div>
+            <div class="card-content">
+              <p>Professor de Biologia e Química</p>
+              <p>Polo(s): 1</p>
+            </div>
+          </div>
+          <div class="foto-card professor">
+            <div class="nome-card">Professor 3</div>
+            <div class="card-content">
+              <p>Professor de Matemática e Física</p>
+              <p>Polo(s): 2</p>
+            </div>
+          </div>
+          <div class="foto-card professor">
+            <div class="nome-card">Professor 4</div>
+            <div class="card-content">
+              <p>Professor de Biologia e Química</p>
+              <p>Polo(s): 1 e 2</p>
+            </div>
+          </div>
+          <div class="foto-card professor">
+            <div class="nome-card">Professor 5</div>
+            <div class="card-content">
+              <p>Professor de História</p>
+              <p>Polo(s): 1 e 2</p>
+            </div>
+          </div>
         </div>
       </article>
     </section>
