--- a/screens/index.html
+++ b/screens/index.html
@@ -189,7 +189,9 @@
         <div class="listTitle">Projeto Elaborado por:</div>
         <div class="group-list">
           <div class="foto-card" id="priscila-eleuterio">
-            <div class="nome-card">Priscila Eleutério</div>
+            <div class="nome-card">
+              <p>Priscila Eleutério</p>
+            </div>
             <div class="card-content">Dirigente Municipal de Educação do Município de Mongaguá.</div>
           </div>
           <div class="logo-prefeitura"></div>
@@ -201,24 +203,43 @@
         <div class="listTitle">Site desenvolvido por:</div>
         <div class="group-list">
           <div class="foto-card" id="demerson">
-            <div class="nome-card">Demerson Guilherme</div>
-            <div class="card-content">Desenvolvedor do Website</div>
+            <div class="nome-card">
+              <p>Demerson Guilherme</p>
+            </div>
+            <div class="card-content">Desenvolvedor do Website</p>
+            </div>
           </div>
           <div class="foto-card" id="felipe">
-            <div class="nome-card">Felipe Barbosa</div>
-            <div class="card-content">Desenvolvedor do Website</div>
+            <div class="nome-card">
+              <p>Felipe Barbosa</p>
+            </div>
+            <div class="card-content">
+              <p>Desenvolvedor do Website</p>
+            </div>
           </div>
           <div class="foto-card" id="ryan">
-            <div class="nome-card">Ryan Gualberto</div>
-            <div class="card-content">Desenvolvedor do Website</div>
+            <div class="nome-card">
+              <p>Ryan Gualberto</p>
+            </div>
+            <div class="card-content">
+              <p>Desenvolvedor do Website</p>
+            </div>
           </div>
           <div class="foto-card" id="sophia">
-            <div class="nome-card">Sophia Verardo</div>
-            <div class="card-content">Desenvolvedora do Website</div>
+            <div class="nome-card">
+              <p>Sophia Verardo</p>
+            </div>
+            <div class="card-content">
+              <p>Desenvolvedora do Website</p>
+            </div>
           </div>
           <div class="foto-card" id="thomas">
-            <div class="nome-card">Thomas Bastos</div>
-            <div class="card-content">Desenvolvedor do Website</div>
+            <div class="nome-card">
+              <p>Thomas Bastos</p>
+            </div>
+            <div class="card-content">
+              <p>Desenvolvedor do Website</p>
+            </div>
           </div>
         </div>
       </article>
