--- a/screens/index.html
+++ b/screens/index.html
@@ -192,7 +192,9 @@
             <div class="nome-card">
               <p>Priscila Eleutério</p>
             </div>
-            <div class="card-content">Dirigente Municipal de Educação do Município de Mongaguá.</div>
+            <div class="card-content">
+              <p>Diretora Municipal de Educação do Município de Mongaguá.</p>
+            </div>
           </div>
           <div class="logo-prefeitura"></div>
           <div class="logo-dem"></div>
@@ -206,7 +208,8 @@
             <div class="nome-card">
               <p>Demerson Guilherme</p>
             </div>
-            <div class="card-content">Desenvolvedor do Website</p>
+            <div class="card-content">
+              <p>Desenvolvedor do Website.</p>
             </div>
           </div>
           <div class="foto-card" id="felipe">
@@ -214,7 +217,7 @@
               <p>Felipe Barbosa</p>
             </div>
             <div class="card-content">
-              <p>Desenvolvedor do Website</p>
+              <p>Desenvolvedor do Website.</p>
             </div>
           </div>
           <div class="foto-card" id="ryan">
@@ -222,7 +225,7 @@
               <p>Ryan Gualberto</p>
             </div>
             <div class="card-content">
-              <p>Desenvolvedor do Website</p>
+              <p>Desenvolvedor do Website.</p>
             </div>
           </div>
           <div class="foto-card" id="sophia">
@@ -230,7 +233,7 @@
               <p>Sophia Verardo</p>
             </div>
             <div class="card-content">
-              <p>Desenvolvedora do Website</p>
+              <p>Desenvolvedora do Website.</p>
             </div>
           </div>
           <div class="foto-card" id="thomas">
@@ -238,7 +241,7 @@
               <p>Thomas Bastos</p>
             </div>
             <div class="card-content">
-              <p>Desenvolvedor do Website</p>
+              <p>Desenvolvedor do Website.</p>
             </div>
           </div>
         </div>
@@ -248,45 +251,57 @@
         <div class="listTitle">Professores do PREPARETEC:</div>
         <div class="group-list">
           <div class="foto-card professor">
-            <div class="nome-card">Dalva Verardo</div>
+            <div class="nome-card">
+              <p>Dalva Verardo</p>
+            </div>
             <div class="card-content">
               <p>Coordenadora Diária e Idealizadora do Projeto. Professora de Matemática.</p>
-              <p>Polo(s): 1 e 2</p>
+              <p>Polo(s): 1 e 2.</p>
             </div>
           </div>
           <div class="foto-card professor">
-            <div class="nome-card">Professor 1</div>
+            <div class="nome-card">
+              <p>Professor 1</p>
+            </div>
             <div class="card-content">
-              <p>Professor de Matemática e Física</p>
-              <p>Polo(s): 1 e 2</p>
+              <p>Professor de Matemática e Física.</p>
+              <p>Polo(s): 1 e 2.</p>
             </div>
           </div>
           <div class="foto-card professor">
-            <div class="nome-card">Professor 2</div>
+            <div class="nome-card">
+              <p>Professor 2</p>
+            </div>
             <div class="card-content">
-              <p>Professor de Biologia e Química</p>
-              <p>Polo(s): 1</p>
+              <p>Professor de Biologia e Química.</p>
+              <p>Polo(s): 1.</p>
             </div>
           </div>
           <div class="foto-card professor">
-            <div class="nome-card">Professor 3</div>
+            <div class="nome-card">
+              <p>Professor 3</p>
+            </div>
             <div class="card-content">
-              <p>Professor de Matemática e Física</p>
-              <p>Polo(s): 2</p>
+              <p>Professor de Matemática e Física.</p>
+              <p>Polo(s): 2.</p>
             </div>
           </div>
           <div class="foto-card professor">
-            <div class="nome-card">Professor 4</div>
+            <div class="nome-card">
+              <p>Professor 4</p>
+            </div>
             <div class="card-content">
-              <p>Professor de Biologia e Química</p>
-              <p>Polo(s): 1 e 2</p>
+              <p>Professor de Biologia e Química.</p>
+              <p>Polo(s): 1 e 2.</p>
             </div>
           </div>
           <div class="foto-card professor">
-            <div class="nome-card">Professor 5</div>
+            <div class="nome-card">
+              <p>Professor 5</p>
+            </div>
             <div class="card-content">
-              <p>Professor de História</p>
-              <p>Polo(s): 1 e 2</p>
+              <p>Professor de História.</p>
+              <p>Polo(s): 1 e 2.</p>
             </div>
           </div>
         </div>
@@ -294,7 +309,8 @@
     </section>
     <footer>
       <article>
-        <aside><img src="/assets/images/logoPreparetec.png" /></aside>
+        <aside><img src="../assets/images/logoPreparetec.png" /><img src="../assets/images/LogoDEM.png"><img
+            src='../assets/images/logoPrefeituraMongagua.png'></aside>
         <aside>
           <h2>Contato:</h2>
           <div class="linkGroups"></div>
@@ -325,6 +341,8 @@
       <img href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTE08oiFkq09f2DVSntow_FXcF6XLKV_oZ6Xw&usqp=CAU">
     </footer>
   </main>
+  <script src="./assets/src/index.js"></script>
+  <script src="./style/style.js"></script>
 </body>
 
 </html>
