colocando scroll no quem somos, falta setinhas

--- a/screens/index.html
+++ b/screens/index.html
@@ -216,7 +216,7 @@
               <p>Demerson Guilherme</p>
             </div>
             <div class="card-content">
-              <p>Desenvolvedor do Website.</p>
+              <p>Desenvolvedor do Website. Aluno da ETEC Adolpho Berezin, terceiro ano em Desenvolvimento de Sistemas.</p>
             </div>
           </div>
           <div class="foto-card" id="felipe">
@@ -224,7 +224,7 @@
               <p>Felipe Barbosa</p>
             </div>
             <div class="card-content">
-              <p>Desenvolvedor do Website.</p>
+              <p>Desenvolvedor do Website. Aluno da ETEC Adolpho Berezin, terceiro ano em Desenvolvimento de Sistemas.</p>
             </div>
           </div>
           <div class="foto-card" id="ryan">
@@ -232,7 +232,7 @@
               <p>Ryan Gualberto</p>
             </div>
             <div class="card-content">
-              <p>Desenvolvedor do Website.</p>
+              <p>Desenvolvedor do Website. Aluno da ETEC Adolpho Berezin, terceiro ano em Desenvolvimento de Sistemas.</p>
             </div>
           </div>
           <div class="foto-card" id="sophia">
@@ -240,7 +240,7 @@
               <p>Sophia Verardo</p>
             </div>
             <div class="card-content">
-              <p>Desenvolvedora do Website.</p>
+              <p>Desenvolvedora do Website. Aluna da ETEC Adolpho Berezin, terceiro ano em Desenvolvimento de Sistemas.</p>
             </div>
           </div>
           <div class="foto-card" id="thomas">
@@ -248,7 +248,7 @@
               <p>Thomas Bastos</p>
             </div>
             <div class="card-content">
-              <p>Desenvolvedor do Website.</p>
+              <p>Desenvolvedor do Website. Aluno da ETEC Adolpho Berezin, terceiro ano em Desenvolvimento de Sistemas.</p>
             </div>
           </div>
         </div>
@@ -262,8 +262,7 @@
               <p>Dalva Verardo</p>
             </div>
             <div class="card-content">
-              <p>Coordenadora Diária e Idealizadora do Projeto. Professora de Matemática.</p>
-              <p>Polo(s): 1 e 2.</p>
+              <p>Coordenadora Diária e Idealizadora do Projeto. Licenciada em Matemática e Física.</p>
             </div>
           </div>
           <div class="foto-card professor">
