tela de login finalizada

--- a/screens/index.html
+++ b/screens/index.html
@@ -16,14 +16,18 @@
 
 <body>
   <section class='upper-header'>
-    <article class='left-upper'>
-    </article>
+    <a href=""><article class='left-upper'>
+    </article></a>
     <article class="right-upper">
-      <aside class="logo-dem"></aside>
-      <aside class="logo-prefeitura"></aside>
+      <a href="">
+        <aside class="logo-dem"></aside>
+      </a>
+      <a href="https://mongagua.sp.gov.br/">
+        <aside class="logo-prefeitura"></aside>
+      </a>
     </article>
   </section>
-  <header>
+  <header class="header-index">
     <nav id="nav">
       <ul id="menu">
         <li><a href='#mapa'>Calendário</a></li>
@@ -41,7 +45,7 @@
       </ul>
     </nav>
   </header>
-  <main>
+  <main class="main-index">
     <section id='mapa'>
       <article id='inicio-content'>
         <h2>Seja Bem Vindo</h2>
@@ -216,7 +220,8 @@
               <p>Demerson Guilherme</p>
             </div>
             <div class="card-content">
-              <p>Desenvolvedor do Website. Aluno da ETEC Adolpho Berezin, terceiro ano em Desenvolvimento de Sistemas.</p>
+              <p>Desenvolvedor do Website. Aluno da ETEC Adolpho Berezin, terceiro ano em Desenvolvimento de Sistemas.
+              </p>
             </div>
           </div>
           <div class="foto-card" id="felipe">
@@ -224,7 +229,8 @@
               <p>Felipe Barbosa</p>
             </div>
             <div class="card-content">
-              <p>Desenvolvedor do Website. Aluno da ETEC Adolpho Berezin, terceiro ano em Desenvolvimento de Sistemas.</p>
+              <p>Desenvolvedor do Website. Aluno da ETEC Adolpho Berezin, terceiro ano em Desenvolvimento de Sistemas.
+              </p>
             </div>
           </div>
           <div class="foto-card" id="ryan">
@@ -232,7 +238,8 @@
               <p>Ryan Gualberto</p>
             </div>
             <div class="card-content">
-              <p>Desenvolvedor do Website. Aluno da ETEC Adolpho Berezin, terceiro ano em Desenvolvimento de Sistemas.</p>
+              <p>Desenvolvedor do Website. Aluno da ETEC Adolpho Berezin, terceiro ano em Desenvolvimento de Sistemas.
+              </p>
             </div>
           </div>
           <div class="foto-card" id="sophia">
@@ -240,7 +247,8 @@
               <p>Sophia Verardo</p>
             </div>
             <div class="card-content">
-              <p>Desenvolvedora do Website. Aluna da ETEC Adolpho Berezin, terceiro ano em Desenvolvimento de Sistemas.</p>
+              <p>Desenvolvedora do Website. Aluna da ETEC Adolpho Berezin, terceiro ano em Desenvolvimento de Sistemas.
+              </p>
             </div>
           </div>
           <div class="foto-card" id="thomas">
@@ -248,7 +256,8 @@
               <p>Thomas Bastos</p>
             </div>
             <div class="card-content">
-              <p>Desenvolvedor do Website. Aluno da ETEC Adolpho Berezin, terceiro ano em Desenvolvimento de Sistemas.</p>
+              <p>Desenvolvedor do Website. Aluno da ETEC Adolpho Berezin, terceiro ano em Desenvolvimento de Sistemas.
+              </p>
             </div>
           </div>
         </div>
@@ -350,8 +359,8 @@
       <img href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTE08oiFkq09f2DVSntow_FXcF6XLKV_oZ6Xw&usqp=CAU">
     </footer>
   </main>
-  <script src="/./assets/src/index.js"></script>
-  <script src="/./assets/styles/style.js"></script>
+  <script src="../assets/src/index.js"></script>
+  <script src="../assets/styles/style.js"></script>
 
 </body>
 
