--- a/screens/cadastro.html
+++ b/screens/cadastro.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <header class="header-login">
+    <header class="header-cadastro">
         <a href='index.html'>
             <article class='left-upper'>
             </article>
@@ -29,20 +29,20 @@
             </a>
         </article>
     </header>
-    <main class="main-login">
-        <form action="" method="post" class="form-login">
-            <h2>LOGIN</h2>
-            <!--<label>Selecione o tipo de usuário:</label>
-            <select name="tipo-usuario" id="tipo-usuario">
-                <option value="administrador">Administrador</option>
-                <option value="professor">Professor</option>
-                <option value="aluno">Aluno</option>
-            </select>-->
+    <main class="main-cadastro">
+        <form action="feed-principal.html" method="post" class="form-cadastro">
+            <h2>CADASTRO</h2>
+            <label>Selecione o tipo de usuário:</label>
             <div class="group-form">
-                <label>Insira seu RA, e-mail ou telefone:</label>
-                <input class="input-login" type='text' id='login' required>
-                <label>Insira sua senha:</label>
-                <input class="input-login" type="password" id='senha' minlength="8" required>
+                <select name="tipo-usuario" id="tipo-usuario">
+                    <option value="administrador">Administrador</option>
+                    <option value="professor">Professor</option>
+                    <option value="aluno">Aluno</option>
+                </select>
+                <label>Insira o e-mail: </label>
+                <input class="input-cadastro" type='text' id='email' required>
+                <label>Insira o telefone:</label>
+                <input class="input-cadastro" type="text" id='telefone' minlength="10" required>
                 <input class='button-submit' type="submit" value="Enviar">
             </div>
         </form>
