início e cadastro terminadas, bugs solucionados
Co-authored-by: Ryan Gualberto <RyanGualberto@users.noreply.github.com>

--- a/screens/index.html
+++ b/screens/index.html
@@ -19,7 +19,7 @@
     <a href=""><article class='left-upper'>
     </article></a>
     <article class="right-upper">
-      <a href="">
+      <a href="https://mongagua.sp.gov.br/educacao">
         <aside class="logo-dem"></aside>
       </a>
       <a href="https://mongagua.sp.gov.br/">
@@ -30,9 +30,9 @@
   <header class="header-index">
     <nav id="nav">
       <ul id="menu">
-        <li><a href='#mapa'>Calendário</a></li>
+        <li ><a  href='#mapa'>Calendário</a></li>
         <li><a href="#nosso-projeto">Nosso Projeto</a></li>
-        <li><a href='#professores'>Professores</a></li>
+        <li><a  href='#professores'>Professores</a></li>
         <li><a href="#quem-somos">Quem Somos?</a></li>
         <button id="btnMenu" style="display: none;">
           <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-list"
@@ -64,8 +64,8 @@
         <aside class="alunos">
           <p>Para Alunos:</p>
           <ul class="list-links">
-            <li class=""><a href="">Acesse o Calendário</a></li>
-            <li><a href="">Saiba Mais</a></li>
+            <li class=""><a href="login.html">Acesse o Calendário</a></li>
+            <li><a href="#nosso-projeto">Saiba Mais</a></li>
             <li><a href="">Acessar Documentação</a></li>
           </ul>
         </aside>
