--- a/screens/login.html
+++ b/screens/login.html
@@ -21,7 +21,7 @@
             </article>
         </a>
         <article class="right-upper">
-            <a href="">
+            <a href="https://mongagua.sp.gov.br/educacao">
                 <aside class="logo-dem"></aside>
             </a>
             <a href="https://mongagua.sp.gov.br/">
@@ -30,7 +30,7 @@
         </article>
     </header>
     <main class="main-login">
-        <form action="" method="post" class="form-login">
+        <form action="feed-principal.html" method="post" class="form-login">
             <h2>LOGIN</h2>
             <!--<label>Selecione o tipo de usuário:</label>
             <select name="tipo-usuario" id="tipo-usuario">
