--- a/screens/cadastro.html
+++ b/screens/cadastro.html
@@ -8,7 +8,7 @@
 
     <title>CADASTRO - PREPARETEC</title>
 
-    <link rel="stylesheet" type="text/css" href="../assets/styles/style.css" />
+    <link rel="stylesheet" type="text/css" href="../assets/styles/cadastro.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
