footer ok, imgs ok, icones ok

--- a/screens/index.html
+++ b/screens/index.html
@@ -327,6 +327,7 @@
           <img src="../assets/images/logoPreparetec.png" />
           <img src="../assets/images/LogoDEM.png" />
           <img src='../assets/images/logoPrefeituraMongagua.png'>
+          <img src="../assets/images/symetra.png" alt="">
         </div>
         <div class="contato">
           <h3>Contato:</h3>
