adicionando: menu hamburguer, falta colocar css para que o menu apareça corretamente

--- a/screens/index.html
+++ b/screens/index.html
@@ -13,6 +13,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+  <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
@@ -31,6 +32,10 @@
   <header class="header-index">
     <nav id="nav">
       <ul id="menu">
+        <i class='bx bx-menu sidebarAbrir' ></i>
+        <div class="toggle">
+        <i class='bx bx-x sidebarFechar' ></i>
+      </div>
         <li ><a  href='#mapa'>Calendário</a></li>
         <li><a href="#nosso-projeto">Nosso Projeto</a></li>
         <li><a  href='#professores'>Professores</a></li>
@@ -190,7 +195,7 @@
         </div>
         <div class="qs">
           <p>
-            Abaixo você verá a nossa equipe de funcionários que participaram para que esse projeto pudesse se tornar
+            Abaixo você verá a nossa equipe de voluntários que participaram para que esse projeto pudesse se tornar
             realidade. Passando com o mouse por cima ou clicando, confira as informações sobre cada um.
           </p>
         </div>
