--- a/screens/cadastro.html
+++ b/screens/cadastro.html
@@ -8,7 +8,7 @@
 
     <title>CADASTRO - PREPARETEC</title>
 
-    <link rel="stylesheet" type="text/css" href="../assets/styles/cadastro.css" />
+    <link rel="stylesheet" type="text/css" href="../assets/styles/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
@@ -79,9 +79,7 @@
             </div>
         </form>
     </main>
-    <script src = "../assets/styles/style.js"></script>
-    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.13.4/jquery.mask.min.js"></script>
+    <script src ="../assets/styles/style.js"></script>
     <script src="../assets/src/index.js"></script>
 </body>
 
