adicionando as fotos e informações dos professores

--- a/screens/index.html
+++ b/screens/index.html
@@ -272,7 +272,7 @@
       <article class="funcionarios">
         <div class="listTitle">Professores do PREPARETEC:</div>
         <div class="group-list">
-          <div class="foto-card professor">
+          <div class="foto-card professor" id="dalva">
             <div class="nome-card">
               <p>Dalva Verardo</p>
             </div>
@@ -280,22 +280,22 @@
               <p>Coordenadora Diária e Idealizadora do Projeto. Licenciada em Matemática e Física.</p>
             </div>
           </div>
-          <div class="foto-card professor">
+          <div class="foto-card professor" id="felipe-luiz">
             <div class="nome-card">
-              <p>Professor 1</p>
+              <p>Felipe Luiz Borges</p>
             </div>
             <div class="card-content">
-              <p>Professor de Matemática e Física.</p>
+              <p>Professor de Português, licenciatura em Letras pela Unicid e Pedagogia pela Unifran.</p>
               <p>Polo(s): 1 e 2.</p>
             </div>
           </div>
-          <div class="foto-card professor">
+          <div class="foto-card professor" id="alexandre">
             <div class="nome-card">
-              <p>Professor 2</p>
+              <p>Alexandre Dalla Pria</p>
             </div>
             <div class="card-content">
-              <p>Professor de Biologia e Química.</p>
-              <p>Polo(s): 1.</p>
+              <p>Conhecido como Prof. Barril, leciona Biologia e é graduado em Ciências Biológicas, estudou na Unesp e na USP.</p>
+              <p>Polo(s): 1 e 2.</p>
             </div>
           </div>
           <div class="foto-card professor">
