fix: tentando colocar css menu hamburguer

--- a/screens/index.html
+++ b/screens/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <title>PREPARETEC</title>
-
+  <link rel="shortcut icon" href="../assets/images/LogoDEM.png" type="image/x-icon">
   <link rel="stylesheet" type="text/css" href="../assets/styles/style.css" />
   <link rel="stylesheet" type="text/css" href="../assets/styles/cadastro.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -32,8 +32,10 @@
   <header class="header-index">
     <nav id="nav">
       <ul id="menu">
-        <i class='bx bx-menu sidebarAbrir' ></i>
+  <div class="menuAbrir">
+    <i class='bx bx-menu sidebarAbrir' ></i>
         <div class="toggle">
+
         <i class='bx bx-x sidebarFechar' ></i>
       </div>
         <li ><a  href='#mapa'>Calendário</a></li>
@@ -49,6 +51,7 @@
         </button>
         <li><a href="#participe" class="btn-p">Participe</a></li>
       </ul>
+    </div>
     </nav>
   </header>
   <main class="main-index">
