O BOTAO TA APARECENDOO

--- a/screens/index.html
+++ b/screens/index.html
@@ -17,8 +17,10 @@
 
 <body>
   <section class='upper-header'>
-    <a href=""><article class='left-upper'>
-    </article></a>
+    <a href="">
+      <article class='left-upper'>
+      </article>
+    </a>
     <article class="right-upper">
       <a href="https://mongagua.sp.gov.br/educacao">
         <aside class="logo-dem"></aside>
@@ -30,27 +32,27 @@
   </section>
   <header class="header-index">
     <nav id="nav">
+      <button id="btnMenu">
+        <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-list"
+          viewBox="0 0 16 16" id="hamburguer">
+          <path fill-rule="evenodd"
+            d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
+        </svg>
+      </button>
       <ul id="menu">
-  <div class="menuAbrir">
-    <i class='bx bx-menu sidebarAbrir' ></i>
-        <div class="toggle">
+        <div class="menuAbrir">
+          <i class='bx bx-menu sidebarAbrir'></i>
+          <div class="toggle">
 
-        <i class='bx bx-x sidebarFechar' ></i>
-      </div>
-        <li ><a  href='#mapa'>Calendário</a></li>
-        <li><a href="#nosso-projeto">Nosso Projeto</a></li>
-        <li><a  href='#professores'>Professores</a></li>
-        <li><a href="#quem-somos">Quem Somos?</a></li>
-        <button id="btnMenu" style="display: none;">
-          <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-list"
-            viewBox="0 0 16 16" id="hamburguer">
-            <path fill-rule="evenodd"
-              d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
-          </svg>
-        </button>
-        <li><a href="#participe" class="btn-p">Participe</a></li>
+            <i class='bx bx-x sidebarFechar'></i>
+          </div>
+          <li><a href='#mapa'>Calendário</a></li>
+          <li><a href="#nosso-projeto">Nosso Projeto</a></li>
+          <li><a href='#professores'>Professores</a></li>
+          <li><a href="#quem-somos">Quem Somos?</a></li>
+          <li><a href="#participe" class="btn-p">Participe</a></li>
+        </div>
       </ul>
-    </div>
     </nav>
   </header>
   <main class="main-index">
@@ -296,7 +298,8 @@
               <p>Alexandre Dalla Pria</p>
             </div>
             <div class="card-content">
-              <p>Conhecido como Prof. Barril, leciona Biologia e é graduado em Ciências Biológicas, estudou na Unesp e na USP.</p>
+              <p>Conhecido como Prof. Barril, leciona Biologia e é graduado em Ciências Biológicas, estudou na Unesp e
+                na USP.</p>
               <p>Polo(s): 1 e 2.</p>
             </div>
           </div>
@@ -331,26 +334,26 @@
       </article>
     </section>
     <footer>
-        <div class="img-footer">
-          <img src="../assets/images/logoPreparetec.png" />
-          <img src="../assets/images/LogoDEM.png" />
-          <img src='../assets/images/logoPrefeituraMongagua.png'>
-          <img src="../assets/images/symetra.png" alt="">
-        </div>
-        <div class="contato">
-          <h3>Contato:</h3>
-          <a href="#face">
-            <img src="../assets/icones/face.png" alt="">
-          </a>
-          <a href="#insta">
-            <img src="../assets/icones/insta.png" alt="">
-          </a>
-          <a href="#email">
-            <img src="../assets/icones/email.png" alt="">
-          </a>
-        </div>
-        <div class="link-footer">
-          <div class="item-footer">
+      <div class="img-footer">
+        <img src="../assets/images/logoPreparetec.png" />
+        <img src="../assets/images/LogoDEM.png" />
+        <img src='../assets/images/logoPrefeituraMongagua.png'>
+        <img src="../assets/images/symetra.png" alt="">
+      </div>
+      <div class="contato">
+        <h3>Contato:</h3>
+        <a href="#face">
+          <img src="../assets/icones/face.png" alt="">
+        </a>
+        <a href="#insta">
+          <img src="../assets/icones/insta.png" alt="">
+        </a>
+        <a href="#email">
+          <img src="../assets/icones/email.png" alt="">
+        </a>
+      </div>
+      <div class="link-footer">
+        <div class="item-footer">
           <h3>Downloads:</h3>
           <ul>
             <li><a href="">Edital - Alunos</a> </li>
@@ -364,8 +367,8 @@
             <li><a href="">Calendário</a> </li>
             <li><a href="">Inscrição De Professores</a></li>
           </ul>
-        </div>  
         </div>
+      </div>
       <div class="envolvidos">
         <a href="">DEPARTAMENTO DE EDUCAÇÃO DE MONGAGUÁ</a>
         <a href="">ETEC ADOLPHO BEREZIN</a>
@@ -380,7 +383,7 @@
   <script src="../assets/styles/style.js"></script>
   <script>
     fetch('http://localhost:3333/api/admin/professores').then(response => response.json()).then(json => console.log(json))    //imprimir dados no console
-    .catch(err => console.log('Erro de solicitação', err)); // lidar com os erros por catch
+      .catch(err => console.log('Erro de solicitação', err)); // lidar com os erros por catch
   </script>
 
 
